# e_commerce

./: .gitignore  Dockerfile  README.md  pyproject.toml
e_commerce/e_commerce/: settings.py  urls.py
e_commerce/shop/: admin.py  forms.py  models.py  querysets.py  urls.py  utils.py  views.py
e_commerce/shop/static/shop/css/: base.css  styles.css
e_commerce/shop/static/shop/js/: cart.js  cart_base.js  like.js
e_commerce/shop/templates/a_shop/: about.html  account.html  base.html  cart.html  category.html  checkout.html  home.html  product.html  search_results.html  super_category.html
e_commerce/shop/templates/a_shop/other/: about.html
e_commerce/shop/templates/a_shop/register/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html
e_commerce/shop/templates/a_shop/samples/: cart_sample.html  filter_offcanvas.html  login_modal.html  multi_carousel.html  navbar.html  offcanvas.html  page_data_bottom.html  page_data_top.html  paginator.html  product_characteristic_sample.html  product_description_sample.html  product_list.html  product_photo_sample.html  product_review_sample.html  register_modal.html  review_modal.html  right_bar.html  right_bar_small.html  super_category_sample.html
e_commerce/shop/templates/shop/: account.html  base.html  category.html  checkout.html  home.html  product.html  search_results.html  super_category.html
e_commerce/shop/templates/shop/other/: about.html  contacts.html  service_centers.html  terms.html
e_commerce/shop/templates/shop/samples/: base_popup_menu.html  cart_sample.html  page_data_bottom.html  page_data_top.html  register_box.html  right_bar.html  right_bar_small.html
e_commerce/shop/templatetags/: shop_tags.py
e_commerce/tests/: bases.py  conftest.py  pytest.ini  settings.py
e_commerce/tests/e_commerce/: conftest.py  factories.py  test_tables.py  test_utils.py  test_views.py
