[tool.poetry]
name = "new-e-commerce"
version = "0.1.0"
description = ""
authors = ["victro-nuzhniy <nuzhniyva@gmail.com>"]
readme = "README.md"
packages = [{include = "new_e_commerce"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1"
asyncpg = "0.25.0"
psycopg2-binary = "2.9.3"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
